--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} 
-{% block title %}{% endblock %}
+{% block title %}Hem{% endblock %}
 
 {% block content %}
 <h1>Reko-hem</h1>
