Laggt till knapp som leder till ny produkt

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,8 +34,8 @@
 
             <a class="nav-item nav-link" href="{{ url_for('index') }}">Hem</a>
             <a class="nav-item nav-link" href="{{ url_for('add_product') }}">Lägg till produkt</a>
-            <!-- <a class="nav-item nav-link" href="{{ url_for('manage_product') }}">Hantera produkt</a>
-            <a class="nav-item nav-link" href="{{ url_for('login') }}">Logga in</a> -->
+            <a class="nav-item nav-link" href="{{ url_for('manage_product') }}">Hantera produkt</a>
+            <a class="nav-item nav-link" href="{{ url_for('login') }}">Logga in</a>
         </div>
       </div>
     </nav>
