Added card for product

--- a/templates/manage_product.html
+++ b/templates/manage_product.html
@@ -9,6 +9,14 @@ Manage Product
 
 <a class="btn btn-primary" href="/add_product" role="button">Ny produkt</a>
 
+<div class="card" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title">Färskpotatis</h5>
+      <p class="card-text">Färskpotatis av bästa kvalitet odlad i frihamnen. Ekologiskt men nytjar barnarbete för att hålla nere kostnaderna. </p>
+      
+      <a class="btn btn-primary" href="/add_product" class="card-link">Uppdatera</a>
+    </div>
+  </div>
 
 
 {% endblock %}
