Lagt med __init__ i Klasser samt plockat ut data ur formulär

--- a/templates/manage_product.html
+++ b/templates/manage_product.html
@@ -1,22 +1,11 @@
 {% extends "base.html" %} 
 {% block title %}
-Manage Product
+Add Product
 {% endblock %}
 
 {% block content %}
 <h1>Hantera produkter</h1>
-<div>Denna sidan skall visa produkter, länk till att lägga till och uppdatera produkter</div>
-
-<a class="btn btn-primary" href="/add_product" role="button">Ny produkt</a>
-
-<div class="card" style="width: 18rem;">
-    <div class="card-body">
-      <h5 class="card-title">Färskpotatis</h5>
-      <p class="card-text">Färskpotatis av bästa kvalitet odlad i frihamnen. Ekologiskt men nytjar barnarbete för att hålla nere kostnaderna. </p>
-      
-      <a class="btn btn-primary" href="/add_product" class="card-link">Uppdatera</a>
-    </div>
-  </div>
-
+<div>Denna sidan skall visa produkter, länk till att lägga till och uppdatera produkter </div>
+    
 
 {% endblock %}
