laggt till produkt kort

--- a/templates/manage_product.html
+++ b/templates/manage_product.html
@@ -6,6 +6,18 @@ Add Product
 {% block content %}
 <h1>Hantera produkter</h1>
 <div>Denna sidan skall visa produkter, länk till att lägga till och uppdatera produkter </div>
-    
+
+
+
+<div class="card" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title">Färskpotatis</h5>
+      <h6 class="card-subtitle mb-2 text-muted">Gustafs potatis</h6>
+      <p class="card-text">Handplockade färskpotatis från frihamnen.</p>
+      
+      <a class="btn btn-primary"  href="/add_product" class="card-link">Uppdatera</a>
+    </div>
+  </div>
+
 
 {% endblock %}
