--- a/templates/base.html
+++ b/templates/base.html
@@ -35,6 +35,7 @@
             <a class="nav-item nav-link" href="{{ url_for('index') }}">Hem</a>
             <a class="nav-item nav-link" href="{{ url_for('add_product') }}">Lägg till produkt</a>
             <a class="nav-item nav-link" href="{{ url_for('manage_product') }}">Hantera produkt</a>
+            <a class="nav-item nav-link" href="{{ url_for('sign_up') }}">Skapa konto</a>
             <a class="nav-item nav-link" href="{{ url_for('login') }}">Logga in</a>
         </div>
       </div>
