--- a/templates/base.html
+++ b/templates/base.html
@@ -37,6 +37,7 @@
             <a class="nav-item nav-link" href="{{ url_for('manage_product') }}">Hantera produkt</a>
             <a class="nav-item nav-link" href="{{ url_for('sign_up') }}">Skapa konto</a>
             <a class="nav-item nav-link" href="{{ url_for('login') }}">Logga in</a>
+            <a class="nav-item nav-link" href="{{ url_for('consumer_shopping') }}">Handla</a>
         </div>
       </div>
     </nav>
