--- a/templates/set_region.html
+++ b/templates/set_region.html
@@ -5,16 +5,15 @@
 <h1>Välj Region</h1>
 
 <div class="dropdown">
-    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-      Dropdown button
+    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"  data-toggle="dropdown" aria-expanded="false">
+      Region
     </button>
     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-      <li><a class="dropdown-item" href="#">Action</a></li>
-      <li><a class="dropdown-item" href="#">Another action</a></li>
-      <li><a class="dropdown-item" href="#">Something else here</a></li>
+      <li><a class="dropdown-item" href="#">VästraGötaland</a></li>
+      <li><a class="dropdown-item" href="#">Bohuslän</a></li>
+      <li><a class="dropdown-item" href="#">Halland</a></li>
     </ul>
-  </div>
+</div>
 
-  
 
 {% endblock %}
