--- a/templates/consumer_shopping.html
+++ b/templates/consumer_shopping.html
@@ -7,17 +7,18 @@ Handla
 {% block content %}
 <h1>Handla produkter</h1>
 
-{% for product in products%}
-<div class="card" style="width: 35rem;">
-    <div class="card-body">
-      <h5 class="card-title">{{product.get_name()}}</h5>
-      <h6 class="card-subtitle mb-2 text-muted">{{product.get_producer()}}</h6>
-      <p class="card-text">{{product.get_description()}}</p>
-      <p class="card-text">Pris:{{product.get_price()}}kr</p>
-      
-      <a class="btn btn-primary" class="card-link">Handla</a>
+<p>
+    <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+        Link with href
+    </a>
+    <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+        Button with data-bs-target
+    </button>
+</p>
+<div class="collapse" id="collapseExample">
+    <div class="card card-body">
+        Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
     </div>
-  </div>
-{%endfor%}
+</div>
 
 {% endblock %}
