Fixing dropdown add bs again

--- a/templates/set_region.html
+++ b/templates/set_region.html
@@ -5,7 +5,7 @@
 <h1>Välj Region</h1>
 
 <div class="dropdown">
-    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"  data-toggle="dropdown" aria-expanded="false">
+    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"  data-bs-toggle="dropdown" aria-expanded="false">
       Region
     </button>
     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
