--- a/templates/set_ring.html
+++ b/templates/set_ring.html
@@ -2,16 +2,16 @@
 {% block title %}Välj Region {% endblock %}
 
 {% block content %}
-<h1>Välj Region</h1>
+<h1>Välj Ring</h1>
 
 <div class="dropdown">
     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"  data-bs-toggle="dropdown" aria-expanded="false">
-      Region
+      Välj Ring
     </button>
     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-      <li><a class="dropdown-item" href="#">VästraGötaland</a></li>
-      <li><a class="dropdown-item" href="#">Bohuslän</a></li>
-      <li><a class="dropdown-item" href="#">Halland</a></li>
+      <li><a class="dropdown-item" href="#">Chalmers/johanneberg</a></li>
+      <li><a class="dropdown-item" href="#">Backaplan</a></li>
+      <li><a class="dropdown-item" href="#">Majorna</a></li>
     </ul>
 </div>
 
