--- a/templates/add_product.html
+++ b/templates/add_product.html
@@ -27,6 +27,24 @@
             placeholder="Pris på produkt"
         />
     </div>
+    <div class="form-group">
+        <label for="productDescription">Produktbeskrivning</label>
+        <input 
+            type="text" 
+            class="form-control" 
+            id="productDescription" 
+            name="productDescription" 
+            placeholder="Produktbeskrivning"
+        />
+    </div>
+
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="True" id="isForSale">
+        <label class="form-check-label" for="flexCheckIndeterminate">
+          Produkten finns tillgänglig
+        </label>
+      </div>
+
     <br />
     <button type="submit" class="btn btn-primary">Lägg till</button>
 </form>
