--- a/templates/shoppingCart.html
+++ b/templates/shoppingCart.html
@@ -1,31 +1,27 @@
 {% extends "base.html" %} 
 
 {% block title %}
-Handla
+Varukorg
 {% endblock %}
 
 {% block content %}
-<h1>Handla produkter</h1>
-
-{% for x in producer%}
+<h1>Varukorg</h1>
 <div class="d-grid gap-2">
     <a class="btn btn-outline-success" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-        {{x.get_name()}}
+        {{namn}}
     </a>
 </div>
 <br/>
-{%endfor%}
 <div class="collapse" id="collapseExample">
     {% for product in products%}
-        <div class="card" style="width: 35rem;" method="Post">
+        <div class="card" style="width: 35rem;">
             <div class="card-body">
             <h5 class="card-title">{{product.get_name()}}</h5>
             <h6 class="card-subtitle mb-2 text-muted">{{product.get_producer()}}</h6>
             <p class="card-text">{{product.get_description()}}</p>
-            <p class="card-text">Saldo: {{product.get_quantity()}}</p>
             <p class="card-text">Pris:{{product.get_price()}}kr</p>
             
-            <a class="btn btn-outline-success" class="card-link">Handla</a>
+            <a type="button" class="btn-close" aria-label="Close"></a>
             </div>
         </div>
     {%endfor%}
