--- a/templates/set_ring.html
+++ b/templates/set_ring.html
@@ -4,16 +4,13 @@
 {% block content %}
 <h1>Välj Ring</h1>
 
-<div class="dropdown">
-    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"  data-bs-toggle="dropdown" aria-expanded="false">
-      Välj Ring
-    </button>
-    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-      <li><a class="dropdown-item" href="#">Chalmers/johanneberg</a></li>
-      <li><a class="dropdown-item" href="#">Backaplan</a></li>
-      <li><a class="dropdown-item" href="#">Majorna</a></li>
-    </ul>
-</div>
+
+    <input class="form-control" list="datalistOptions" id="set_ring" placeholder="Välj Ring">
+    <datalist id="datalistOptions">
+      {% for ring in ringar %}
+      <option value="{{ring.get_name}}">
+      {% endfor %}
+  </datalist>
 
 
 {% endblock %}
