Löst autogenerering på handla sidan av producent och produkter
Lagt med index.js fil

--- a/templates/add_product.html
+++ b/templates/add_product.html
@@ -38,9 +38,9 @@
         />
     </div>
 
-    <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="True" id="isForSale">
-        <label class="form-check-label" for="flexCheckIndeterminate">
+    <div class="form-group">
+        <input class="form-check-input" type="checkbox" value="True" name="isForSale" id="isForSale">
+        <label class="form-check-label" for="isForSale">
           Produkten finns tillgänglig
         </label>
       </div>
