--- a/templates/consumer_shopping.html
+++ b/templates/consumer_shopping.html
@@ -7,28 +7,33 @@ Handla
 {% block content %}
 <h1>Handla produkter</h1>
 
-{% for x in producer%}
-<div class="d-grid gap-2">
-    <a class="btn btn-outline-success" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-        {{x.get_name()}}
-    </a>
-</div>
+{% for producer in producers%}
 <br/>
+    <div class="d-grid gap-2">
+        <a class="btn btn-outline-success" data-bs-toggle="collapse" href={{"#"+producer.get_name()}} role="button" aria-expanded="false">
+            {{producer.get_name()}}
+        </a>
+    </div>
+    <br/>
+    
+    <div class="collapse" id={{producer.get_name()}}>
+        {% for product in products%}
+            {% if producer.get_name() == product.get_producer() %}
+                <div class="card" style="width: 35rem;" method="Post">
+                    <div class="card-body">
+                    <h5 class="card-title">{{product.get_name()}}</h5>
+                    <h6 class="card-text">{{product.get_description()}}</h6>
+                    <p class="card-text">Saldo: {{product.get_quantity()}}</p>
+                    <p class="card-text">Pris: {{product.get_price()}}kr</p>
+                    <button type="button" class="close" onClick="productBuy({{ product.get_name }})">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <a class="btn btn-outline-success me-md-1" class="card-link" type="submit">Handla</a>  
+                    </div>
+                </div>
+            {% endif %}
+        {%endfor%}
+    </div>
 {%endfor%}
-<div class="collapse" id="collapseExample">
-    {% for product in products%}
-        <div class="card" style="width: 35rem;" method="Post">
-            <div class="card-body">
-            <h5 class="card-title">{{product.get_name()}}</h5>
-            <h6 class="card-subtitle mb-2 text-muted">{{product.get_producer()}}</h6>
-            <p class="card-text">{{product.get_description()}}</p>
-            <p class="card-text">Saldo: {{product.get_quantity()}}</p>
-            <p class="card-text">Pris:{{product.get_price()}}kr</p>
-            
-            <a class="btn btn-outline-success" class="card-link">Handla</a>
-            </div>
-        </div>
-    {%endfor%}
-</div>
 
 {% endblock %}
