Ändrat knappar till gröna för enhetlighet

--- a/templates/add_product.html
+++ b/templates/add_product.html
@@ -55,7 +55,7 @@
 
 
     <br />
-    <button type="submit" class="btn btn-primary">Lägg till</button>
+    <button type="submit" class="btn btn-outline-success me-md-1">Lägg till</button>
 </form>
 
 {% endblock %}
