--- a/templates/consumer_shopping.html
+++ b/templates/consumer_shopping.html
@@ -13,7 +13,7 @@ Handla
     {% for ring in ringar %}
       <option value={{ring.get_name()}}>
         {% endfor %}
-    </datalist><button type="submit" class="btn btn-primary">Välj</button>
+    </datalist><button type="submit" class="btn btn-outline-success me-md-1">Välj</button>
     
  </form>
 
