--- a/templates/login.html
+++ b/templates/login.html
@@ -27,6 +27,6 @@ Logga in
         />
     </div>
     <br />
-    <button type="submit" class="btn btn-primary">Login</button>
+    <button type="submit" class="btn btn-outline-success me-md-1">Login</button>
 </form>
 {% endblock %}
