--- a/templates/manage_product.html
+++ b/templates/manage_product.html
@@ -19,7 +19,7 @@ Hantera produkt
         <input class="form-check-input" type="checkbox" id="for_sale" >
         <label class="form-check-label" for="flexSwitchCheckDefault">Produkt finns tillgänglig</label>
       </div>
-      <a class="btn btn-primary"  href="/add_product" class="card-link">Uppdatera</a>
+      <a class="btn btn-outline-success me-md-1"  href="/add_product" class="card-link">Uppdatera</a>
     </div>
   </div>
 {%endfor%}
