--- a/templates/set_ring.html
+++ b/templates/set_ring.html
@@ -12,7 +12,7 @@
       {% endfor %}
   </datalist>
   
-  <button type="submit" class="btn btn-primary">Välj</button>
+  <button type="submit" class="btn btn-outline-success me-md-1">Välj</button>
 </form>
 
 {% endblock %}
