--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -38,7 +38,7 @@ Skapa konto
     </div>
 
     <br />
-    <button type="submit" class="btn btn-primary">Skapa</button>
+    <button type="submit" class="btn btn-outline-success me-md-1">Skapa</button>
 </form>
 
 {% endblock %}
