--- a/templates/consumer_shopping.html
+++ b/templates/consumer_shopping.html
@@ -16,7 +16,7 @@ Handla
     </datalist><button type="submit" class="btn btn-outline-success me-md-1">Välj</button>
     
  </form>
-
+ <form method="post" id="add_cart_form">
 {% for producer in producers%}
 <br/>
     <div class="d-grid gap-2">
@@ -25,25 +25,39 @@ Handla
         </a>
     </div>
     <br/>
-    
+ 
     <div class="collapse" id={{producer.get_name()}}>
         {% for product in products%}
             {% if producer.get_name() == product.get_producer() %}
-                <div class="card" style="width: 35rem;" method="Post">
+                <div class="card" style="width: 35rem;">
                     <div class="card-body">
                     <h5 class="card-title">{{product.get_name()}}</h5>
                     <h6 class="card-text">{{product.get_description()}}</h6>
                     <p class="card-text">Saldo: {{product.get_quantity()}}</p>
                     <p class="card-text">Pris: {{product.get_price()}}kr</p>
-                    <button type="button" class="close" onClick="productBuy({{ product.get_name }})">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                    <a class="btn btn-outline-success me-md-1" class="card-link" type="submit">Handla</a>  
+                    <button type="submit" class="btn btn-outline-success me-md-1" value="test" name="add_cart" id="add_cart">Handla</button>
                     </div>
                 </div>
             {% endif %}
         {%endfor%}
     </div>
 {%endfor%}
-
+</form>
+<script src="https://code.jquery.com/jquery-3.5.1.js" 
+          integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" 
+          crossorigin="anonymous"></script>
+<script type="text/javascript">
+    $(document).on('submit','#add_cart_form',function(e)
+                   {
+      console.log('hello');
+      e.preventDefault();
+      $.ajax({
+        type:'POST',
+        url:'/handla',
+        data:{
+          todo:$("#todo").val()
+        },
+      })
+    });
+  </script>
 {% endblock %}
