tagit bort visa vara tillgänglig/ring

--- a/templates/manage_product.html
+++ b/templates/manage_product.html
@@ -21,7 +21,7 @@ Hantera produkt
       </p>
       
       
-      <div class="form-check form-switch">
+      <!-- <div class="form-check form-switch">
         {%if product.get_is_for_sale()%}
         <input class="form-check-input" type="checkbox" id="for_sale" checked >
         <label class="form-check-label" for="flexSwitchCheckDefault">Produkt finns tillgänglig</label>
@@ -30,12 +30,12 @@ Hantera produkt
       <input class="form-check-input" type="checkbox" id="for_sale" >
         <label class="form-check-label" for="flexSwitchCheckDefault">Produkt finns tillgänglig</label>
       </div>
-      {%endif%}
-      <a class="btn btn-outline-success me-md-1"  href="#" class="card-link" disabled>Hantera</a>
+      {%endif%} -->
+      <a class="btn btn-outline-success me-md-1"  href="#" class="card-link" disabled>Uppdatera</a>
     </div>
   </div>
 {%endif%}
 {%endfor%}
-<a class="btn btn-outline-success me-md-1" href="#">Uppdatera</a>
+
 
 {% endblock %}
