my order, add to history - incert

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,8 +29,6 @@
       <div class="collapse navbar-collapse" id="navbar">
         <div class="navbar-nav">
 
-            
-
             <a class="nav-item nav-link" href="{{ url_for('index') }}">Hem</a>
             <a class="nav-item nav-link" href="{{ url_for('add_product') }}">Lägg till produkt</a>
             <a class="nav-item nav-link" href="{{ url_for('manage_product') }}">Hantera produkt</a>
@@ -39,6 +37,8 @@
             <a class="nav-item nav-link" href="{{ url_for('consumer_shopping') }}">Handla</a>
             <a class="nav-item nav-link" href="{{ url_for('shoppingCart') }}">Varukorg</a>
             <a class="nav-item nav-link" href="{{ url_for('set_ring') }}">Välja Ring</a>
+            <a class="nav-item nav-link" href="{{ url_for('my_order') }}">Min Order</a>
+
         </div>
       </div>
     </nav>
