--- a/templates/my_order.html
+++ b/templates/my_order.html
@@ -2,5 +2,17 @@
 {% block title %}Min order{% endblock %}
 
 {% block content %}
-Här skall det vara en sida som listar ens senaste ordrar.
+<h1>Ordrar</h1>
+<form method="POST">
+  <div class="form-group">
+    <label for="chouse_order">Välj order</label>
+    <select class="form-control" id="chouse_order">
+        {% for order in user.get_order_history()%}
+        <option value=order>{{order}}</option>
+        {%endfor%}
+    </select>
+        <button type="submit" class="btn btn-outline-success me-md-1">Välj</button> 
+    </div>
+</form>
+
 {% endblock %}
