--- a/templates/base.html
+++ b/templates/base.html
@@ -30,15 +30,21 @@
         <div class="navbar-nav">
 
             <a class="nav-item nav-link" href="{{ url_for('index') }}">Hem</a>
-            <a class="nav-item nav-link" href="{{ url_for('add_product') }}">Lägg till produkt</a>
-            <a class="nav-item nav-link" href="{{ url_for('manage_product') }}">Hantera produkt</a>
-            <a class="nav-item nav-link" href="{{ url_for('sign_up') }}">Skapa konto</a>
-            <a class="nav-item nav-link" href="{{ url_for('login') }}">Logga in</a>
-            <a class="nav-item nav-link" href="{{ url_for('consumer_shopping') }}">Handla</a>
-            <a class="nav-item nav-link" href="{{ url_for('shoppingCart') }}">Varukorg</a>
-            <a class="nav-item nav-link" href="{{ url_for('set_ring') }}">Välja Ring</a>
-            <a class="nav-item nav-link" href="{{ url_for('my_order') }}">Min Order</a>
-
+            {% if user %} 
+              {% if user.get_user_type() == "producer" or user.get_user_type() == "consumer" %} 
+                <a class="nav-item nav-link" href="{{ url_for('sign_up') }}">Skapa konto</a>
+                <a class="nav-item nav-link" href="{{ url_for('login') }}">Logga in</a>
+                  {% if user.get_user_type() == "consumer" %} 
+                  <a class="nav-item nav-link" href="{{ url_for('consumer_shopping') }}">Handla</a>
+                  <a class="nav-item nav-link" href="{{ url_for('shoppingCart') }}">Varukorg</a>
+                  <a class="nav-item nav-link" href="{{ url_for('set_ring') }}">Välja Ring</a>
+                  {% elif user.get_user_type() == "producer" %} 
+                  <a class="nav-item nav-link" href="{{ url_for('add_product') }}">Lägg till produkt</a>
+                  <a class="nav-item nav-link" href="{{ url_for('manage_product') }}">Hantera produkt</a>
+                {% endif %} 
+              {% endif %} 
+            {% endif %} 
+            
         </div>
       </div>
     </nav>
