--- a/templates/shoppingCart.html
+++ b/templates/shoppingCart.html
@@ -7,7 +7,7 @@ Varukorg
 {% block content %}
 <h1>Varukorg</h1>
 {% if user.get_producers()%}
-<form method="Post"></form>
+<form method="Post">
 <h3>Totalt {{ user.sum_producer()}} kr</h3>
   {% set cart = user.get_cart_list() %}
   {% for producer in user.get_producers()%}
@@ -34,7 +34,7 @@ Varukorg
               {% endif %}
           {%endfor%}
   {%endfor%}
-  <button class="btn btn-outline-success me-md-1" type="submit", value="test" name="add_cart">Genomför köp</button>
+  <button class="btn btn-outline-success me-md-1" type="submit" value="hej" name="buy_cart">Genomför köp</button>
 </form>
 {% else %} 
 <h2>Varukorgen är tom. Gå till handla för att lägga till produkter</h2>
