--- a/templates/shoppingCart.html
+++ b/templates/shoppingCart.html
@@ -15,7 +15,7 @@ Varukorg
   <br/>
       <div class="d-grid gap-2">
           <label class="btn btn-outline-success">
-              {{producer}} Summa: {{sum_prod[producer]}} kr
+              {{producer.get_name()}} Summa: {{sum_prod[producer]}} kr
           </a>
       </div>
       <br/>
