Lagt med återkoppling när man lagt en order

--- a/templates/shoppingCart.html
+++ b/templates/shoppingCart.html
@@ -37,7 +37,12 @@ Varukorg
   <button class="btn btn-outline-success me-md-1" type="submit" value="hej" name="buy_cart">Genomför köp</button>
 </form>
 {% else %} 
-<h2>Varukorgen är tom. Gå till handla för att lägga till produkter</h2>
+<h2>Varukorgen är tom</h2>
+</br>
+<p>Gå till handla för att lägga till produkter nya produkter
+</br>
+Gå till Mina ordrar för att se lagda ordrar
+</p>
 {% endif %}
 
 {% endblock %}
