--- a/templates/base.html
+++ b/templates/base.html
@@ -59,16 +59,10 @@
           {% if category == "error" %}
           <div class="alert alert-danger alter-dismissable fade show" role="alert">
             {{ message }}
-            <button type="button" class="close" data-dismiss="alert">
-              <span aria-hidden="true">&times;</span>
-            </button>
           </div>
           {% else %}
-          <div class="alert alert-warning alert-dismissible fade show" role="alert">
-            <strong>Holy guacamole!</strong> You should check in on some of those fields below.
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
+          <div class="alert alert-success alter-dismissable fade show" role="alert">
+            {{ message }}
           </div>
           {% endif %} 
         {% endfor %} 
