Lagt med orderhistorik för konsument

--- a/templates/consumer_shopping.html
+++ b/templates/consumer_shopping.html
@@ -20,7 +20,7 @@ Handla
 {% for producer in producers%}
 <br/>
     <div class="d-grid gap-2">
-        <label class="btn btn-outline-success">
+        <label class="btn btn-success">
             {{producer.get_name()}}
         </a>
     </div>
